fix: collapsing hero section

--- a/src/styles/breakpoints.scss
+++ b/src/styles/breakpoints.scss
@@ -10,10 +10,24 @@
     --section-margin-px: 36px;
   }
 
+  // Bootstrap
+  .row {
+    row-gap: 36px;
+  }
+
   // Custom
   .base-button {
     border-radius: 20px;
     padding: 16px;
+  }
+
+  .hero {
+    height: 750px;
+    background-image: url('assets/images/hero_picture.jpg')
+  }
+
+  .hero-content {
+    row-gap: 28px;
   }
 }
 
@@ -35,10 +49,6 @@
   .base-button {
     border-radius: 16px;
     padding: 8px;
-  }
-
-  .hero {
-    height: 500px;
   }
 
   .hero-content {
@@ -65,8 +75,16 @@
     padding: 6px;
   }
 
+  .hero {
+    height: 450px;
+    background-image: url('assets/images/hero_picture_alt.jpg')
+  }
+
   .hero-content {
     row-gap: 16px;
+    justify-content: flex-end;
+    align-items: center;
+    padding-bottom: 36px;
   }
 }
 
@@ -86,7 +104,15 @@
   }
 
   .hero {
-    height: 300px;
+    height: 400px;
+    background-image: url('assets/images/hero_picture.jpg')
+  }
+
+  .hero-content {
+    row-gap: 12px;
+    justify-content: flex-start;
+    align-items: start;
+    padding-top: 24px;
   }
 }
 
@@ -106,7 +132,15 @@
   }
 
   .hero {
-    height: 250px;
+    height: 300px;
+    background-image: url('assets/images/hero_picture.jpg')
+  }
+
+  .hero-content {
+    row-gap: 12px;
+    justify-content: flex-start;
+    align-items: start;
+    padding-top: 16px;
   }
 }
 
@@ -126,6 +160,14 @@
   }
 
   .hero {
-    height: 200px;
+    height: 210px;
+    background-image: url('assets/images/hero_picture_alt.jpg')
+  }
+
+  .hero-content {
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 12px;
+    padding-bottom: 12px;
   }
 }
